tests/unit/components/WalletActivity.spec.ts
// import Vuex from 'vuex'
// import { shallowMount, createLocalVue } from '@vue/test-utils'

// import WalletActivity from '@/components/WalletActivity.vue'
// import { TranslationMock, SoramitsuElementsImport } from '../../utils'

// TODO: fix it
// TypeError: Cannot redefine property: configDescriptor
//         at Function.defineProperty (<anonymous>)
//
//       33 | import { Component, Mixins } from 'vue-property-decorator'
//       34 | import { Getter, Action } from 'vuex-class'
//     > 35 | import { AccountAsset, Asset, KnownSymbols } from '@sora-substrate/util'

// const localVue = createLocalVue()
// localVue.use(Vuex)
// const store = new Vuex.Store({
//   modules: {
//     Account: {
//       getters: {
//         activity: () => ([
//           {
//             operation: 'SWAP',
//             fromSymbol: 'XOR',
//             fromAmount: 100,
//             toSymbol: 'KSM',
//             toAmount: 24390.1239,
//             status: 'IN_PROGRESS',
//             date: 1605048643745
//           }
//         ])
//       },
//       actions: {
//         getAccountActivity: jest.fn()
//       }
//     }
//   } as any
// })

describe('WalletActivity.vue', () => {
  beforeEach(() => {
    // SoramitsuElementsImport(localVue)
    // TranslationMock(WalletActivity)
  });

  it('should renders correctly', () => {
    // const wrapper = shallowMount(WalletActivity, { localVue, store })
    // expect(wrapper.element).toMatchSnapshot()
    expect(true).toBe(true);
  });
});
